Fixed unnecessary line-breaks in search view BMM-79

--- a/common/app/styles/partials/viewer-client.scss
+++ b/common/app/styles/partials/viewer-client.scss
@@ -1,6 +1,6 @@
 .search-result {
   margin-bottom: .5em;
-  display: inline-block;
+  overflow: hidden;
   img {
     height: 6em;
     width: auto;
